--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "eslint": "^6.2.1",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^2.2.1",
@@ -35,10 +35,14 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "history": "^4.9.0",
+    "material-design-icons": "^3.0.1",
     "postcss-clean": "^1.1.0",
     "postcss-fail-on-warn": "^0.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
   }
 }
